# temporal-example

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  run-hello-workflow.py  run-order-processing-workflow.py  run-review-workflow.py  run-user-onboard-workflow.py
app/: activities.py  models.py  worker.py  workflows.py
app/activities/: greeting.py  order_processing.py
app/infrastructure/: kyc_client.py
app/workers/: cpu_worker.py  io_worker.py  main_worker.py
app/workflows/: greeting.py  order_processing.py  user_onboarding.py
include/db/migrations/: 01_init.sql
include/wiremock/mappings/: kyc_api.json
src/: run-hello-workflow.py  run-order-processing-workflow.py  run-review-workflow.py  run-user-onboard-workflow.py
src/app/: settings.py
src/app/activities/: email.py  order_processing.py  review_ml.py  user_onboarding.py
src/app/infrastructure/: db.py  kyc_client.py  logger.py  ml_models.py
src/app/shared/: models.py
src/app/workers/: cpu_worker.py  gpu_worker.py  io_worker.py  main_worker.py
src/app/workflows/: greeting.py  order_processing.py  review_ml.py  user_onboarding.py
tests/: conftest.py
tests/activities/: test_greeting.py
tests/workflows/: test_greeting_wf.py  test_order_wf.py
