[project]
name = "temporal-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "httpx>=0.28.1",
    "pydantic[email]>=2.13.0",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.49",
    "temporalio>=1.25.0",
]
